--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,7 +1,8 @@
 baseURL: "https://jiddan.aboutme.my.id"
 languageCode: "en-us"
 title: "Jiddan Profile"
-theme: hugo-profile
+theme: "hugo-profile"
+
 
 outputs:
   home:
@@ -152,7 +153,7 @@ params:
   about:
     enable: true
     title: "About Me"
-    image: "/images/me.png"
+    image: "/images/hero.svg"
     content: |-
       I am a Project Management Enthusiast and Quality Assurance who has experience in the fields of Functional Testing, Non-Functional Testing, Testing Documentation, BDD, and also has experience in carrying out Project Management using the Agile Method. At Independent Study Campus Batch 5 at Alterra Academy, I had the opportunity to become head of the QA division. 
       
